# monoloticas-projectos

./: .env.example  .gitignore  EVENT_DRIVEN_GUIDE.md  MonoliticasPostman.json  README.md  README_LOCAL.md  check_pulsar_topics.py  debug_event_flow.py  docker-compose.event-driven.yml  docker-compose.event-driven.yml.backup  docker-compose.simple.yml  docker-compose.yml  event_test_suite.py  fix_timestamps.py  init_databases.sql  reset_topics.py  run_local.md  simple_jwt.py  simple_publisher_test.py  start.sh  start_and_test.sh  start_event_driven.sh  start_http_services.sh  start_local.sh  start_platform.sh  start_simple.sh  stop.sh  stop_platform.sh  test_event_driven.py  test_local_integration.py  test_schemas_only.py  topic_tester.py  update_topics.py  worklog.md
bff/: .env.example  Dockerfile  README.md  generate_jwt.py  main.py  main_event_driven.py  main_simple.py  pyproject.toml  simple_main.py  simple_publisher.py  test_campaign_producer.py  test_main.py
bff/api/: __init__.py
bff/api/routers/: __init__.py  campaign_router.py  evidence_router.py  payment_router.py
bff/api/schemas/: __init__.py
bff/api/schemas/common/: base_dtos.py
bff/api/schemas/requests/: campaign_requests.py  evidence_requests.py  payment_requests.py
bff/api/schemas/responses/: campaign_responses.py  error_response_dtos.py  evidence_responses.py  payment_responses.py
bff/application/: __init__.py
bff/application/commands/: __init__.py  accept_campaign_command.py  request_payment_command.py  upload_evidence_command.py
bff/application/events/: __init__.py  integration_events.py
bff/application/handlers/: __init__.py  accept_campaign_handler.py  request_payment_handler.py  upload_evidence_handler.py
bff/config/: __init__.py  jwt_auth.py  pulsar_config.py
bff/messaging/: __init__.py  avro_consumer.py  avro_publisher.py  event_handlers.py  pulsar_command_publisher.py  pulsar_response_consumer.py
bff/messaging/schemas/: avro_schemas.py
bff/src/: api.py
bff/src/application/commands/: publish_partner_command.py
bff/src/application/handlers/: publish_partner_handler.py
bff/src/domain/entities/: partner.py  payment.py
campaigns/: .env.example  (+4 more)
campaingn/: Dockerfile  main_event_driven.py  pyproject.toml  simple_consumer.py
campaingn/messaging/handlers/: campaign_event_handlers.py  pulsar_event_handler.py
campaingn/seedwork/domain/: aggregates.py  events.py
payment/: Dockerfile  main_event_driven.py  pyproject.toml  simple_consumer.py
payment/messaging/: event_handlers.py
(+164 files in other folders)
